--- a/.github/actions/hello-world-action/action.yml
+++ b/.github/actions/hello-world-action/action.yml
@@ -1,3 +1,3 @@
-- name: Setup Node.js environment
-  uses: actions/setup-node@v3.2.0
+name: Setup Node.js environment
+uses: actions/setup-node@v3.2.0
   
