feat: pretty style check in github workflow

--- a/.github/workflows/prettier-check.yml
+++ b/.github/workflows/prettier-check.yml
@@ -37,3 +37,6 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install dependencies
         run: npm ci
+
+      - name: Run Pretty Style Check
+        run: npm run style:prettier
