--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"style:prettier": "prettier --check '**/*.{js}'"
+		"style:prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'"
 	},
 	"repository": {
 		"type": "git",
