--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"homepage": "https://github.com/BaliSutej/github-workflows#readme",
 	"devDependencies": {
+		"eslint": "^8.35.0",
 		"prettier": "2.8.3"
 	}
 }
