--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test:unit": "jest /tests/unit",
 		"style:prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'",
 		"lint": "eslint '**/*.js'"
 	},
@@ -20,6 +20,7 @@
 	"homepage": "https://github.com/BaliSutej/github-workflows#readme",
 	"devDependencies": {
 		"eslint": "^8.35.0",
-		"prettier": "2.8.3"
+		"jest": "^29.4.3",
+		"prettier": "^2.8.4"
 	}
 }
