--- a/.github/workflows/prettier-check.yml
+++ b/.github/workflows/prettier-check.yml
@@ -48,5 +48,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Runs a single command using the runners shell
+      - uses: actions/checkout@v3
+
       - name: Run Unit Test Script
         run: npm run test:unit
